--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --forceExit",
+		"test": "jest",
 		"dev": "tsx watch ./src/main.ts"
 	},
 	"engines": {
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.4.1",
 		"multer": "^1.4.5-lts.1"
