--- a/.github/workflows/action-discord.yml
+++ b/.github/workflows/action-discord.yml
@@ -25,7 +25,7 @@ jobs:
         if: steps.check_commit.outputs.contains_documentation == 'true'
         uses: ./ # Uses an action in the root directory
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          webhook: 'https://discord.com/api/webhooks/1145788482233585724/ASG7bfuNCrEYqUd-6f8mBECuUigDN-IAa7LjnIzB9fCMA5w7M9twwBbYwZZFXSqPLs9-'
           template: 'avatar-with-link'
           include-extras: true
           # message: "Successful commit to **{{ github.context.payload.repository.owner.name }}/{{ github.context.payload.repository.name}}**.\nDiff: {{ github.context.payload.compare }}"
